Updated to server version 1.8.0.5

--- a/map.html
+++ b/map.html
@@ -3702,7 +3702,7 @@
 	}
 
 	function setWind(direction, speed) {
-		$('i#arrow').css('transform', 'rotate(' + Math.round(direction) + 'deg) scale(2.)');
+		$('i#arrow').css('transform', 'rotate(' + Math.round(direction) + 'deg) scale(2.0)');
 		$('.backButton').text(Math.round(direction) + '/' + Math.round(speed));
 	}
 
