Updated to version 1.8.0.6

--- a/map.html
+++ b/map.html
@@ -3778,7 +3778,9 @@
 				setWind(latlng[5], latlng[6]);
 				if (latlng[0] != lastLat && latlng[1] != lastLng) {
 					if (showPath == true) {
-						polyline.addLatLng([latlng[0], latlng[1]]);
+						if (calcCrow(59.3293371,13.4877472,59.3225525,13.4619422).toFixed(1)*1000 > 5){
+							polyline.addLatLng([latlng[0], latlng[1]]);
+						}
 					}
 					lastLat = latlng[0];
 					lastLng = latlng[1];
@@ -3796,6 +3798,28 @@
 			}
 		}
 	}
+
+	    //This function takes in latitude and longitude of two location and returns the distance between them as the crow flies (in km)
+		function calcCrow(lat1, lon1, lat2, lon2) 
+    {
+      var R = 6371; // km
+      var dLat = toRad(lat2-lat1);
+      var dLon = toRad(lon2-lon1);
+      var lat1 = toRad(lat1);
+      var lat2 = toRad(lat2);
+
+      var a = Math.sin(dLat/2) * Math.sin(dLat/2) +
+        Math.sin(dLon/2) * Math.sin(dLon/2) * Math.cos(lat1) * Math.cos(lat2); 
+      var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a)); 
+      var d = R * c;
+      return d;
+    }
+
+    // Converts numeric degrees to radians
+    function toRad(Value) 
+    {
+        return Value * Math.PI / 180;
+    }
 
 	function setWaypoints() {
 		var i = 0;
